[#65] Tweaked size and spacing of solves in solve area. Adjusted positioning of timer and controls elements.

--- a/app/static/less/timer_page.less
+++ b/app/static/less/timer_page.less
@@ -465,7 +465,7 @@
     .timer2_scramble_area {
         width: 100%;
         height: 100%;
-        padding: 10px;
+        padding: 10px 20px;
 
         color: white;
         font-family: 'Roboto', sans-serif;
@@ -498,7 +498,7 @@
 }
 
 #the_timer {
-    height: 50%;
+    height: 60%;
     width: 100%;
 
     font-family: 'Roboto', sans-serif;
@@ -520,7 +520,7 @@
 }
 
 .timer2_mods_area {
-    height: 50%;
+    height: 40%;
     width: 100%;
 
     .timer2_controls_wrapper {
@@ -552,14 +552,21 @@
     -webkit-box-shadow: 5px 0px 7px 0px rgba(0,0,0,0.64);
     -moz-box-shadow: 5px 0px 7px 0px rgba(0,0,0,0.64);
 
-    .timer2_times {
-        height: 50%;
 
-        font-family: "Droid Sans Mono";
+
+    .timer2_times {
+        height: 40%;
+
+        font-family: 'Roboto Mono', monospace;
+
+        .timer2_solves_header {
+            text-align: left;
+            height: 10%;
+        }
 
         .timer2_single_time {
-            padding: 10px;
-            font-size: 22px;
+            padding: 5px;
+            font-size: 18px;
             text-align: center;
             border-bottom: 1px solid #eeeeee;
 
@@ -567,9 +574,7 @@
             align-items: center;
             justify-content: center;
 
-            &.ao5 {
-                height: 20%;
-            }
+            height: 18%;
         }
     }
 
@@ -579,7 +584,6 @@
 }
 
 .timer2_sidebar_wrapper {
-    padding-right: 10px;
     height: 100%;
     width: 100%;
     position: relative;
